--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,12 +17,13 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
-    <string name="homeAssistantIpEditTextPreviewIp">192.168.1.123</string>
-    <string name="findIPButtonText">Search for HA IP</string>
+    <string name="homeAssistantIpEditTextPreviewIp">http://192.168.1.123:8123</string>
+    <string name="findIPButtonText">Search for HA URL</string>
     <string name="switchOnSwipeText">Switch on swipe</string>
     <string name="backButtonText">Back</string>
     <string name="automaticBrightnessText">Automatic Brightness</string>
     <string name="ScreenSaverText">Screen Saver</string>
     <string name="http_server_status_default">HTTP Server:</string>
     <string name="start">START</string>
+    <string name="lite_mode">Lite Mode</string>
 </resources>
