Review settings screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,19 +7,30 @@
     <string name="switchOnSwipeText">Switch on swipe</string>
     <string name="automaticBrightnessText">Automatic Brightness</string>
     <string name="ScreenSaverText">Screen Saver</string>
-    <string name="http_server_status_default">HTTP Server:</string>
+    <string name="http_server_status_default">Status:</string>
     <string name="start">START</string>
     <string name="lite_mode">Lite Mode</string>
     <string name="screen_saver_delay">Screen Saver Delay</string>
     <string name="screen_saver_delay_hint">45</string>
     <string name="screenSaverTypeText">Screen Saver Type</string>
     <string name="http_server_enabled">HTTP Server enabled:</string>
+    <string name="http_server_address">Address:</string>
     <string name="extended_js_interface">Extended JS Interface</string>
     <string name="brightness">Brightness</string>
     <string name="mqtt">MQTT</string>
     <string name="broker_address">Broker address</string>
-    <string name="http_server_running">HTTP Server: Running</string>
-    <string name="http_server_not_running">HTTP Server: Not running</string>
+    <string name="http_server_running">Status: Running</string>
+    <string name="http_server_not_running">Status: Not running</string>
     <string name="settings_saved">Settings saved</string>
     <string name="delay_must_be_bigger_then_5s">Delay must be bigger then 5s</string>
+    <string name="settings">Settings</string>
+    <string name="mqttbroker_hint">tcp://192.168.1.123</string>
+    <string name="broker_port">Broker port</string>
+    <string name="username">Username</string>
+    <string name="mqtt_username_hint">username</string>
+    <string name="password">Password</string>
+    <string name="mqtt_password_hint">password</string>
+    <string name="server_url">http://%1$s:8080</string>
+    <string name="android_settings">Android settings</string>
+    <string name="exit">Exit</string>
 </resources>
