--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="server_url">http://%1$s:8080</string>
     <string name="android_settings">Android settings</string>
     <string name="exit">Exit</string>
+    <string name="back">Back</string>
+    <string name="accessibility_description">This service will show a \"Back\" button when ShellyElevate is not visible.</string>
 </resources>
