Add setting to configure minBrightness

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="back">Back</string>
     <string name="accessibility_description">This service will show a \"Back\" button when ShellyElevate is not visible.</string>
     <string name="accessibility_service_not_enabled">Enable accessibility service to continue</string>
+    <string name="min_brightness">Minimum brightness</string>
 </resources>
